# resumemk.cli

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  test.md
app/: bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/src/: App.tsx  Icons.tsx  Tab.tsx  index.css  lib.ts  main.tsx  routeTree.gen.ts  store.ts  types.d.ts  vite-env.d.ts
app/src/routes/: editor.lazy.tsx  index.lazy.tsx
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml  build.rs  package-lock.json  package.json
apps/server/app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/server/app/src/: index.css  routeTree.gen.ts  vite-env.d.ts
apps/server/app/src/components/: icons.tsx
apps/server/app/src/components/editor/: tab.tsx
apps/server/app/src/components/ui/: button.tsx  dialog.tsx
apps/server/app/src/constants/: default.ts
apps/server/app/src/routes/: __root.tsx  editor.lazy.tsx  index.lazy.tsx
apps/server/app/src/routes/documents/: $documentId.tsx  index.tsx
apps/server/app/src/store/: use-resume-store.ts  use-tab-store.ts
apps/server/app/src/utils/: request.ts
apps/server/src/: assets.rs  main.rs
apps/server/web/: README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js
apps/server/web/src/: dashboard.html  dashboard.js  index.html  modal.js  request.js  resume.html  resume.js  resume_store.js  style.css  types.ts
apps/server/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/server/web/src/app/resume/: edit-dialog.tsx  editor-tabs.tsx  header.tsx  page.tsx  preview.tsx  show-preview-store.ts
apps/server/web/src/app/resumes/: page.tsx
apps/server/web/src/components/: footer.tsx  icons.tsx  loading-page.tsx
apps/server/web/src/hooks/: use-create-query-string.ts
apps/server/web/src/store/: use-resume-store.ts
apps/server/web/src/utils/: request.ts
cli/: Cargo.toml
public/: resume.html
resume_builder/template/: base.css
src/: cli.rs  main.rs  resume_builder.rs  server.rs
