[package]
name = "resumemk"
version = "2.0.0"
edition = "2021"
authors = ["Diego Rezende <diegommrez12@gmail.com>"]
description = "Generate a resume from a markdown file"
license = "MIT"

[dependencies]
headless_chrome = "1.0.15"
clap = { version = "4.5.22", features = ["derive"] }
markdown = "1.0.0-alpha.21"
rust-embed = "8.5.0"
serde_json = "1.0.133"
failure = "0.1.8"

[features]
default = ["server"]
server = []

[[bin]]
name = "resumemk"
path = "src/main.rs"
