[package]
name = "resumemk"
version = "2.0.0"
edition = "2021"
authors = ["Diego Rezende <diegommrez12@gmail.com>"]
description = "Generate a resume from a markdown file"
license = "MIT"

[dependencies]
headless_chrome = "1.0.15"
markdown = "1.0.0-alpha.21"
clap = { version = "4.5.22", features = ["derive"] }
rust-embed = "8.5.0"
serde_json = "1.0.133"
failure = "0.1.8"

[workspace]
members = [
  "apps/*",
  "packages/*"
]

[[bin]]
name = "cli"
path = "apps/cli/src/main.rs"

[[bin]]
name = "server"
path = "apps/server/src/main.rs"
