[package]
name = "resumemk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
resume_builder = { path = "../../packages/resume_builder" }
headless_chrome = "1.0.15"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rust-embed = "8.5.0"
serde_json = "1.0.133"
