[package]
name = "resumemk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
resume_builder = { path = "../../packages/resume_builder" }
tide = {version = "0.17.0-beta.1"}
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.39"
tempfile = "3.19.1"
thiserror = "2.0.11"

[build-dependencies]
tar = "0.4.39"

[[bin]]
name = "resumemk_server"
path = "src/main.rs"
