[package]
name = "resumemk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
resume_builder = { path = "../../packages/resume_builder" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
include_dir = "0.7.4"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }


[[bin]]
name = "resumemk_server"
path = "src/main.rs"
